syntax = "proto3";

package com.example.grpc;
option csharp_namespace = "HospitalApp.Protos";
import "Protos/model.proto";

service NetGrpcService {
	rpc transfer (MessageProto) returns (MessageResponseProto);
}
